--- a/src/components/input.module.css
+++ b/src/components/input.module.css
@@ -1,9 +1,7 @@
 /* MessageInput.module.css */
 .messageInputContainer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    left: 0;
-    right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,3 +38,15 @@
 }
 
 /* Add additional styles as needed */
+@media (max-width:1000px) {
+    .messageInputContainer {
+        left: 0;
+        right: 0;
+    }
+}
+
+@media (min-width:1001px) {
+    .messageInputContainer {
+        width: 65%;
+    }
+}
