frontend fixed for homepage

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -3,14 +3,14 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #36393f;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, .25);
+    backdrop-filter: blur(15px);
     /* Discord dark theme background color */
     color: white;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     /* Discord shadow effect */
     z-index: 10;
 }
