--- a/src/components/chat-window.module.css
+++ b/src/components/chat-window.module.css
@@ -45,6 +45,13 @@
     /* Discord message background color for other users */
 }
 
+.profilePicture {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 .sender {
     font-weight: bold;
     margin-right: 5px;
